feat: 支持单卡编辑和删除
